--- a/.github/hello-world.yml
+++ b/.github/hello-world.yml
@@ -1,9 +1,12 @@
 name: Hello World
-on:
-  push
+on: 
+  push:
+    branches:
+      - main
+
 jobs:
   hello-job:
     runs-on: ubuntu-latest
     steps:
-    - name: Echo text
-      run: echo "Hello, world!"
+      - name: Echo text
+        run: echo "Hello, world!"
